--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "next": "^9.1.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
